4: added info about other files in the repository

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Here are some of the things I'd like to do:
   about the effectiveness of models for a particular data set.
   However, I came to the realization last night that I do not have 
   a distributed system tucked away in my back pocket.  Therefore,
-  I will so composite line graphs of the results of a single run.
+  I will do composite line graphs of the results of a single run.
   BUT, if anyone would like to grant me access to a distributed 
   system of some kind, I would be more than happy to run the needed
   tests and compose the desired statistics.  Until then, a line 
@@ -25,3 +25,12 @@ Here are some of the things I'd like to do:
 * pixel logic game
 
 * more to come later.  Any suggestions?  
+
+
+--- 
+
+BTW, there are also some programs titled Ex[number].[number] in 
+this directory.  These are examples I've played with from a 
+great book called "Python Scripting for Computational Science",
+Third Edition.  This is a great book!  I recommend it for anyone
+wanting to learn Python.  
